@@ -8,6 +8,7 @@
 	* Fixed Bug #94: Fails to detect winreg imported as _winreg in get_system_info
 	* Fixed Bug #95: Include if Python is 32 or 64 bit in get_system_info
 	* Fixed Bug #87: lscpu gets brand field twice
+	* Fixed Bug #96: Include Python version in output
 
 06/10/2017 Release 3.3.0
 	* Fixed Bug #70: subprocess.Popen breaks under Windows GUI app
